--- a/app/index.html
+++ b/app/index.html
@@ -63,20 +63,53 @@
     </div>
 
 
-<!--
     <footer class="page-footer">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="white-text">Contact us!</h5>
+                    <div class="row">
+                        <form class="col s12">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">account_circle</i>
+                                    <input id="icon_prefix" type="text" class="validate">
+                                    <label for="icon_prefix">First Name</label>
+
+                                </div>
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">phone</i>
+                                    <input id="icon_telephone" type="tel" class="validate">
+                                    <label for="icon_telephone">Telephone</label>
+                                </div>
+
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">email</i>
+                                    <input id="email" type="email" class="validate">
+                                    <label for="email" data-error="wrong" data-success="right">Email</label>
+                                </div>
+                                <div class="input-field col s12">
+                                    <i class="ion-compose prefix"></i>
+                                    <textarea id="textarea1" class="materialize-textarea"></textarea>
+                                    <label for="textarea1">Enter message here</label>
+                                </div>
+                                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                                    <i class="material-icons right">send</i>
+                                </button>
+
+
+                            </div>
+                        </form>
+                    </div>
+
+
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Connect with us!</h5>
                     <ul>
                         <li>
                             <a class="grey-text text-lighten-3" href="https://www.facebook.com/PeaceofMindPaint/">
-                                <i class="ion-social-facebook" </i>
+                                <i class="ion-social-facebook"></i>
                             </a>
                         </li>
                         <li>
@@ -95,7 +128,6 @@
             </div>
         </div>
     </footer>
--->
 
 
 
