--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
                                     <textarea id="textarea1" class="materialize-textarea"></textarea>
                                     <label for="textarea1">Enter message here</label>
                                 </div>
-                                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                                <button class="btn waves-effect waves-light submit" type="submit" name="action">Submit
                                     <i class="material-icons right">send</i>
                                 </button>
 
