--- a/app/index.html
+++ b/app/index.html
@@ -42,17 +42,17 @@
     <div class="header" ng-cloak="">
         <nav ng-controller="NavCtrl">
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">POMP</a>
+                <a href="#" class="brand-logo">POMP</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#/work">Work</a></li>
+                    <li><a href="#/work">Gallery</a></li>
                     <li><a href="#/services">Services</a></li>
-                    <li><a href="#/testimonials">Testimonials</a></li>
+                    <li><a href="#/testimonials">Praise</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
-                    <li><a href="#/work">Work</a></li>
+                    <li><a href="#/work">Gallery</a></li>
                     <li><a href="#/services">Services</a></li>
-                    <li><a href="#/testimonials">Testimonials</a></li>
+                    <li><a href="#/testimonials">Praise</a></li>
                 </ul>
             </div>
         </nav>
@@ -63,44 +63,45 @@
     </div>
 
 
-    <footer class="page-footer">
+<!--
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Contact us!</h5>
-                    <div class="row">
-                        <form class="col s12">
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <i class="material-icons prefix">account_circle</i>
-                                    <input id="icon_prefix" type="text" class="validate">
-                                    <label for="icon_prefix">First Name</label>
 
-                                </div>
-                                <div class="input-field col s12">
-                                    <i class="material-icons prefix">phone</i>
-                                    <input id="icon_telephone" type="tel" class="validate">
-                                    <label for="icon_telephone">Telephone</label>
-                                </div>
-
-                                <div class="input-field col s12">
-                                    <i class="material-icons prefix">email</i>
-                                    <input id="email" type="email" class="validate">
-                                    <label for="email" data-error="wrong" data-success="right">Email</label>
-                                </div>
-                                <div class="input-field col s12">
-                                    <i class="ion-compose prefix"></i>
-                                    <textarea id="textarea1" class="materialize-textarea"></textarea>
-                                    <label for="textarea1">Enter message here</label>
-                                </div>
-                                <button class="btn waves-effect waves-light submit" type="submit" name="action">Submit
-                                    <i class="material-icons right">send</i>
-                                </button>
-
+                    <form class="col s12">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">account_circle</i>
+                                <input id="icon_prefix" type="text" class="validate">
+                                <label for="icon_prefix">First Name</label>
 
                             </div>
-                        </form>
-                    </div>
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">phone</i>
+                                <input id="icon_telephone" type="tel" class="validate">
+                                <label for="icon_telephone">Telephone</label>
+                            </div>
+
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">email</i>
+                                <input id="email" type="email" class="validate">
+                                <label for="email" data-error="wrong" data-success="right">Email</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <i class="ion-compose prefix"></i>
+                                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                                <label for="textarea1">Enter message here</label>
+                            </div>
+                            <button class="btn waves-effect waves-light submit" type="submit" name="action">Submit
+                                <i class="material-icons right">send</i>
+                            </button>
+
+
+                        </div>
+                    </form>
+
 
 
                 </div>
@@ -119,15 +120,17 @@
                         </li>
                     </ul>
                 </div>
+                <div class="footer-copyright col s12">
+                    © 2016 Peace of Mind Painting
+                    <a class="grey-text text-lighten-4 right" href="#!">Built by Efflorescent</a>
+                </div>
             </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                © 2016 Peace of Mind Painting
-                <a class="grey-text text-lighten-4 right" href="#!">Built by Efflorescent</a>
-            </div>
+
+
+
         </div>
     </footer>
+-->
 
 
 
