--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
     <div class="header" ng-cloak="">
         <nav ng-controller="NavCtrl">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">POMP</a>
+                <a href="#/" class="brand-logo">POMP</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#/work">Gallery</a></li>
