--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
                     <li><a href="#/testimonials">Praise</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
+                   <li><a href="#/">Home</a></li>
                     <li><a href="#/work">Gallery</a></li>
                     <li><a href="#/services">Services</a></li>
                     <li><a href="#/testimonials">Praise</a></li>
