--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
                     <li><a href="#/testimonials">Praise</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
-                   <li><a href="#/">Home</a></li>
+                    <li><a href="#/">Home</a></li>
                     <li><a href="#/work">Gallery</a></li>
                     <li><a href="#/services">Services</a></li>
                     <li><a href="#/testimonials">Praise</a></li>
@@ -64,38 +64,42 @@
     </div>
 
 
-<!--
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Contact us!</h5>
 
-                    <form class="col s12">
+                    <form class="col s12" action="https://formspree.io/peaceofmindpaint@gmail.com" method="POST">
                         <div class="row">
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">account_circle</i>
-                                <input id="icon_prefix" type="text" class="validate">
-                                <label for="icon_prefix">First Name</label>
+                                <input id="icon_prefix" type="text" class="validate" name="name">
+                                <label for="icon_prefix">Name</label>
 
                             </div>
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">phone</i>
-                                <input id="icon_telephone" type="tel" class="validate">
+                                <input id="icon_telephone" type="tel" class="validate" name="_phone">
                                 <label for="icon_telephone">Telephone</label>
                             </div>
 
+                            <!-- Formspree config -->
+                            <input type="text" name="_gotcha" style="display:none" />
+                            <input type="hidden" name="_subject" value="POMP Inquiry" />
+                            <input type="hidden" name="_next" value="https://peaceofmindpaint.com/#/thanks" />
+
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">email</i>
-                                <input id="email" type="email" class="validate">
-                                <label for="email" data-error="wrong" data-success="right">Email</label>
+                                <input id="email" type="email" class="validate" name="_replyto">
+                                <label for="email" data-error="is that an email address?" data-success="looks good..">Email</label>
                             </div>
                             <div class="input-field col s12">
                                 <i class="ion-compose prefix"></i>
-                                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                                <textarea id="textarea1" class="materialize-textarea" name="_message"></textarea>
                                 <label for="textarea1">Enter message here</label>
                             </div>
-                            <button class="btn waves-effect waves-light submit" type="submit" name="action">Submit
+                            <button class="btn waves-effect waves-light submit" type="submit" value="Send" name="action">Submit
                                 <i class="material-icons right">send</i>
                             </button>
 
@@ -103,27 +107,39 @@
                         </div>
                     </form>
 
-
-
                 </div>
-                <div class="col l4 offset-l2 s12">
+                <div class="col l4 offset-l2 s12 connect">
                     <h5 class="white-text">Connect with us!</h5>
-                    <ul>
-                        <li>
-                            <a class="grey-text text-lighten-3" href="https://www.facebook.com/PeaceofMindPaint/">
-                                <i class="ion-social-facebook"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="grey-text text-lighten-3" href="https://www.instagram.com/peaceofmindpainting/">
-                                <i class="ion-social-instagram-outline"></i>
-                            </a>
-                        </li>
-                    </ul>
+                    <div class="row">
+                        <div class="col s3 m6">
+                            <ul>
+                                <li>
+                                    <a class="grey-text text-lighten-3" href="https://www.facebook.com/PeaceofMindPaint/" target="_blank">
+                                        <i class="ion-social-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="grey-text text-lighten-3" href="https://www.instagram.com/peaceofmindpainting/" target="_blank">
+                                        <i class="ion-social-instagram-outline"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col s9 m6 info">
+                            <ul>
+                                <li>6436 Spring View Ln
+                                    <br>Knoxville, TN 37918</li>
+                                <li>865-279-0608</li>
+                                <li>peaceofmindpaint@gmail.com</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
                 </div>
                 <div class="footer-copyright col s12">
                     © 2016 Peace of Mind Painting
-                    <a class="grey-text text-lighten-4 right" href="#!">Built by Efflorescent</a>
+                    <!--                    <a class="grey-text text-lighten-4 right" href="#/">Built by Efflorescent</a>-->
                 </div>
             </div>
 
@@ -131,7 +147,6 @@
 
         </div>
     </footer>
--->
 
 
 
@@ -179,6 +194,7 @@
     <script src="scripts/controllers/work.js"></script>
     <script src="scripts/controllers/testimonials.js"></script>
     <script src="scripts/controllers/services.js"></script>
+    <script src="scripts/controllers/thanks.js"></script>
     <!-- endbuild -->
 </body>
 
