--- a/app/index.html
+++ b/app/index.html
@@ -40,23 +40,25 @@
 
     <!-- Add your site or application content here -->
     <div class="header" ng-cloak="">
-        <nav ng-controller="NavCtrl">
-            <div class="nav-wrapper">
-                <a href="#/" class="brand-logo">POMP</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#/work">Gallery</a></li>
-                    <li><a href="#/services">Services</a></li>
-                    <li><a href="#/testimonials">Praise</a></li>
-                </ul>
-                <ul class="side-nav" id="mobile-demo">
-                    <li><a href="#/">Home</a></li>
-                    <li><a href="#/work">Gallery</a></li>
-                    <li><a href="#/services">Services</a></li>
-                    <li><a href="#/testimonials">Praise</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="navbar-fixed">
+            <nav ng-controller="NavCtrl">
+                <div class="nav-wrapper">
+                    <a href="#/" class="brand-logo"><img src="images/POMP-logo.png" alt=""></a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="#/work">Gallery</a></li>
+                        <li><a href="#/services">Services</a></li>
+                        <li><a href="#/testimonials">Praise</a></li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li><a href="#/">Home</a></li>
+                        <li><a href="#/work">Gallery</a></li>
+                        <li><a href="#/services">Services</a></li>
+                        <li><a href="#/testimonials">Praise</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
 
     <div>
