--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
                 <div class="col l6 s12">
                     <h5 class="white-text">Contact us!</h5>
 
-                    <form class="col s12" action="https://formspree.io/peaceofmindpaint@gmail.com" method="POST">
+                    <form class="col s12" action="https://formspree.io/scott@peaceofmindpaint.com" method="POST">
                         <div class="row">
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">account_circle</i>
