Add pictures / other shit

--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,8 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-
-
-
 
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -22,6 +18,7 @@
 
     <link rel="stylesheet" href="assets/angular-gridster.min.css" />
 
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -30,6 +27,12 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+
+
+
+
+
 
 </head>
 
@@ -66,7 +69,7 @@
     </div>
 
 
-    <footer >
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
@@ -132,7 +135,7 @@
                                 <li>6436 Spring View Ln
                                     <br>Knoxville, TN 37918</li>
                                 <li>865-279-0608</li>
-                                <li>peaceofmindpaint@gmail.com</li>
+                                <li>scott@peaceofmindpaint.com</li>
                             </ul>
                         </div>
                     </div>
@@ -202,7 +205,7 @@
 
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 
-<!--    <script src="bower_components/javascript-detect-element-resize/jquery.resize.js"></script>-->
+    <!--    <script src="bower_components/javascript-detect-element-resize/jquery.resize.js"></script>-->
 
     <script src="assets/angular-gridster.min.js"></script>
     <!-- Compiled and minified JavaScript -->
