Horizontal scroll / Gridster stuff

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 
 
 
+    <link rel="stylesheet" href="assets/angular-gridster.min.css" />
 
 
 
@@ -69,7 +70,7 @@
     </div>
 
 
-    <footer>
+    <footer style="overflow-x:hidden;">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
@@ -207,9 +208,11 @@
 
     <!--    <script src="bower_components/javascript-detect-element-resize/jquery.resize.js"></script>-->
 
-    <script src="assets/angular-gridster.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
+     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+
+    <script src="assets/angular-gridster.min.js"></script>
+
 </body>
 
 </html>
